# identity-access-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_users.py  002_refresh_tokens.py
src/identity_access_service/: main.py
src/identity_access_service/api/: dependencies.py
src/identity_access_service/api/routes/: auth.py  health.py  users.py
src/identity_access_service/api/schemas/: auth.py  user.py
src/identity_access_service/application/: auth.py  users.py
src/identity_access_service/core/: config.py
src/identity_access_service/domain/: errors.py
src/identity_access_service/infrastructure/: database.py  passwords.py
src/identity_access_service/infrastructure/models/: __init__.py  refresh_token.py  user.py
src/identity_access_service/infrastructure/repositories/: refresh_tokens.py  users.py
tests/: conftest.py
tests/api/: test_auth.py  test_health.py  test_users.py
